; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_transactions.c_fill_async_readblock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_transactions.c_fill_async_readblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_packet = type { i32*, i32, i32, i64 }

@TCODE_READB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hpsb_packet*, i32, i32)* @fill_async_readblock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_async_readblock(%struct.hpsb_packet* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hpsb_packet*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.hpsb_packet* %0, %struct.hpsb_packet** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @TCODE_READB, align 4
  %8 = call i32 @PREP_ASYNC_HEAD_ADDRESS(i32 %7)
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 %9, 16
  %11 = load %struct.hpsb_packet*, %struct.hpsb_packet** %4, align 8
  %12 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 3
  store i32 %10, i32* %14, align 4
  %15 = load %struct.hpsb_packet*, %struct.hpsb_packet** %4, align 8
  %16 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %15, i32 0, i32 1
  store i32 16, i32* %16, align 8
  %17 = load %struct.hpsb_packet*, %struct.hpsb_packet** %4, align 8
  %18 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %17, i32 0, i32 3
  store i64 0, i64* %18, align 8
  %19 = load %struct.hpsb_packet*, %struct.hpsb_packet** %4, align 8
  %20 = getelementptr inbounds %struct.hpsb_packet, %struct.hpsb_packet* %19, i32 0, i32 2
  store i32 1, i32* %20, align 4
  ret void
}

declare dso_local i32 @PREP_ASYNC_HEAD_ADDRESS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
